# sourced

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  STATUS.md  VISION.md  audit_deferred.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
agents/: academic-researcher.md  source-finder.md  voice-extractor.md
citations/: csl-json-emitter.md  schema.md
docs/: INSTALL.md  MODES.md  SKILLS.md  STYLES.md  VOICES.md
docs/archive/audits/: 2026-07-03-mental-verb-audit.md
docs/archive/plans/: 2026-04-19-csl-direct-consumption-plan.md  2026-04-19-voice-extractor-decoupling-plan.md  2026-04-20-voice-issue-fixes.md  2026-04-21-sourced-cli-phase-1.md  2026-04-24-per-project-directory-restructure.md  (+1 more)
docs/plans/: 2026-04-19-csl-direct-consumption-plan.md  2026-04-19-voice-extractor-decoupling-plan.md
docs/specs/: 2026-04-19-csl-direct-consumption-design.md  2026-04-19-voice-extractor-decoupling-design.md  2026-04-20-annotated-bibliography-design.md  2026-04-20-latex-paste-target-design.md
skills/browser-reader-extract/: SKILL.md  overdrive.mjs  package.json
src/sourced/: __init__.py  __main__.py  cli.py  config.py  context.py  errors.py  mirror.py  project.py  render.py  ui.py
templates/: CLAUDE.md  brief.template.annotated-bib.md  brief.template.md  voice.md
templates/filters/: smart-quotes.lua
templates/styles/: apa7.md  chicago17-ad.md  chicago17-nb.md  ieee.md  mla9.md
templates/voices/: academic.md  casual.md  hybrid.md  journalistic.md  narrative.md
tests/: conftest.py
tests/consistency/: registry.py  test_fragment_consistency.py  test_skill_frontmatter.py
tests/emitter/: README.md  test_fixtures_wellformed.py
tests/parity/: README.md  _render.sh  run-all.sh  test_parity.py
(+159 files in other folders)
