[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "sourced"
description = "Claude Code framework for academic papers"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
# syrupy ceiling: 5.5.0 registers the xdist-only pytest_testnodedown hook unconditionally,
# which pluggy rejects as an unknown hook when pytest-xdist is absent (INTERNALERROR at
# collection; reproduced 2026-07-06). Lift the ceiling when a fixed release lands.
test = ["pytest>=8.0", "syrupy>=4.6,<5.5"]
dev = ["sourced[test]", "ruff>=0.15"]

[project.scripts]
sourced = "sourced.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/sourced/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sourced"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "parity: pandoc+CSL golden parity (requires pandoc; version pinned in tests/parity/PANDOC_VERSION)",
]
